--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test-launch": "lambda-local -l index.js -e ../../examples/LaunchRequest.json",
-    "test": "lambda-local -l index.js -e ../../examples/LearnVMPIntent.json"
+    "test-repeat": "lambda-local -l index.js -e ../../examples/AMAZON.RepeatIntent.json",
+    "test": "lambda-local -l index.js -e ../../examples/LearnIntent.json"
   },
   "author": "",
   "dependencies": {
